Migrated the WPF project to the Domain classes.

--- a/FantasyNameGenerator.Blazor/Pages/Home.razor
+++ b/FantasyNameGenerator.Blazor/Pages/Home.razor
@@ -95,8 +95,8 @@
 
 @code
 {
-    private IDictionary<string, NameCategory> Categories = new Dictionary<string, NameCategory>();
-    private IDictionary<string, NameCulture> Cultures = new Dictionary<string, NameCulture>();
+    private IReadOnlyDictionary<string, NameCategory> Categories = new Dictionary<string, NameCategory>();
+    private IReadOnlyDictionary<string, NameCulture> Cultures = new Dictionary<string, NameCulture>();
     private List<GeneratedName> GeneratedNames = [];
 
     public Gender Gender { get; set; }
