Refactored the Domain.

--- a/FantasyNameGenerator.Blazor/Pages/Home.razor
+++ b/FantasyNameGenerator.Blazor/Pages/Home.razor
@@ -1,5 +1,7 @@
 ﻿@page "/"
-@using FantasyNameGenerator.Lib.Domain
+@using FantasyNameGenerator.Lib.Domain.Common
+@using FantasyNameGenerator.Lib.Domain.Model
+@using FantasyNameGenerator.Lib.Domain.Services
 @inject INameCultureProvider service
 @inject IJSRuntime JS
 
