--- a/FantasyNameGenerator.WPF/App.xaml
+++ b/FantasyNameGenerator.WPF/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="FantasyNameGenerator.WPF.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:FantasyNameGenerator.WPF"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:FantasyNameGenerator.WPF">
     <Application.Resources>
          
     </Application.Resources>
